<resources>
    <string name="app_name">AIVoiceChanger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_">Welcome to \nVoice Ai: Rap \ngenerator</string>
    <string name="the_ultimat">The ultimate \nRap Song generator experience.</string>
    <string name="label">Continue</string>
    <string name="write_a_pro">• Write a prompt &amp; get lyrics \n• Choose a beat \n• Choose your favorite rapper\n• Share your creation</string>
    <string name="ai_voices">AI Voices</string>
    <string name="start_here">Start here</string>
    <string name="generate_a_">Generate a rap song in a few \neasy steps!</string>
    <string name="generate">Generate</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="character_say">What should AI character say?</string>
    <string name="max_250">Max 250 Character</string>
    <string name="max_250_1">250</string>
    <string name="select_voice">Select AI Voice</string>
    <string name="trump">Donald Trump</string>
    <string name="obama">Barack Obama</string>
    <string name="taylor">Taylor \nSwift</string>
    <string name="elon">Elon \nMusk</string>
    <string name="brad">Brad Pitt</string>
    <string name="cent_50">50 Cent</string>
    <string name="dua_lipa">Dua Lipa</string>
    <string name="johnny">Johnny Depp</string>
    <string name="write_promts">Write your promts</string>
    <string name="trump_token">TM:4v0ft4j72y2g</string>
    <string name="obama_token">TM:58vtv7x9f32c</string>
    <string name="taylor_token">TM:gfewc9jkbg48</string>
    <string name="elon_token">TM:fxq6hnfc3rht</string>
    <string name="brad_token">TM:pqett48qpw0k</string>
    <string name="cent_50_token">TM:3cj7r4b4q9ks</string>
    <string name="dua_lipa_token">TM:gbp61y7mm0z8</string>
    <string name="johnny_token">TM:ca08cc0dgrdd</string>
    <string name="aı_genereting">Generating \nAI Voice</string>
    <string name="generating_text">Please wait while we\'re generating your song \nkeep the app open</string>
    <string name="ai_voice">AI Voice</string>
    <string name="time1">00:00</string>
    <string name="time2">1.24</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
</resources>