<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ai_voices.AIVoicesFragment">
    <TextView
        android:id="@+id/textViewAIVoicesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ai_voices"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewBackVoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAIVoicesTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAIVoicesTitle" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/character_say"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackVoices" />

    <EditText
        android:id="@+id/textViewContent"
        android:layout_width="0dp"
        android:layout_height="198dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:gravity="top|start"
        android:hint="@string/write_promts"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/light_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewQuestion"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

    <TextView
        android:id="@+id/textViewExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/max_250"
        android:textColor="@color/light_grey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textViewContent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

    <TextView
        android:id="@+id/textViewCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/max_250_1"
        android:textColor="@color/light_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewContent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

    <TextView
        android:id="@+id/textViewSelectAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/select_voice"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewExplain"
        app:layout_constraintTop_toBottomOf="@+id/textViewExplain" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGenerateVoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:text="@string/generate"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewCelebrity" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCelebrity"
        android:layout_width="391dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGenerateVoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectAI" />


</androidx.constraintlayout.widget.ConstraintLayout>