<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.song_playing.SongPlayingFragment">

    <TextView
        android:id="@+id/textViewSongPlayingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ai_voice"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewBackVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSongPlayingTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSongPlayingTitle" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/celebrity"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="48dp"
        android:elevation="2dp"
        android:src="@drawable/elon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSongPlayingTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:src="@drawable/custom_image_backgorund"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSongPlayingTitle" />

    <TextView
        android:id="@+id/textViewAIVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/ai_voice"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <TextView
        android:id="@+id/textViewCelebrityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Kanye"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAIVoice" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/thumb_seekbar"
        android:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCelebrityName" />

    <TextView
        android:id="@+id/textViewTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:text="@string/time1"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/textViewTimeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:text="@string/time2"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ImageView
        android:id="@+id/imageViewPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/play_button_background"
        app:layout_constraintEnd_toStartOf="@+id/imageViewBefore"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewReplace"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimeEnd" />

    <ImageView
        android:id="@+id/imageViewReplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_fiftyteen_replay"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlay"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPlay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlay" />

    <ImageView
        android:id="@+id/imageViewBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_fiftyteen_before"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewPlay"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlay" />

    <ImageView
        android:id="@+id/imageViewPlayArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlay"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPlay"
        app:layout_constraintStart_toStartOf="@+id/imageViewPlay"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlay"
        app:layout_constraintVertical_bias="0.31" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_save"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        android:textColor="@color/purple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlay" />

</androidx.constraintlayout.widget.ConstraintLayout>